samples/_failures_safe/1761424436_0260f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7191a040.c: In function ‘main’:
./samples/SAFE/__tmp_7191a040.c:143:5: error: expected expression at end of input
  143 |     if (start < 0 || start >= node_count || end < 0 || end >= node_count)
      |     ^~
./samples/SAFE/__tmp_7191a040.c:143:5: error: expected declaration or statement at end of input
